Test Status and Error LED ok

--- a/ESP32_DongTamV3/main/CMakeLists.txt
+++ b/ESP32_DongTamV3/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "DongTamESP32.cpp" "GUI/GUI.cpp" "GUI/PressureBar.cpp"
+idf_component_register(SRCS "DongTamESP32.cpp" "GUI/GUI.cpp" "GUI/PressureBar.cpp" "GUI/StatusLED.cpp" "GUI/ButtonGUI.cpp"
                     INCLUDE_DIRS "")
