feat: Add pressure & rtc var to receive data from stm32

--- a/ESP32_DongTamV3/main/CMakeLists.txt
+++ b/ESP32_DongTamV3/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "BoardParameter.cpp" "DongTamESP32.cpp" "GUI/GUI.cpp" "GUI/PressureBar.cpp" "GUI/StatusLED.cpp" "GUI/ButtonGUI.cpp" "BoardParameter.cpp"
+idf_component_register(SRCS "BoardParameter.cpp" "DongTamESP32.cpp" "GUI/GUI.cpp" "GUI/PressureBar.cpp" "GUI/StatusLED.cpp" "GUI/ButtonGUI.cpp" "BoardParameter.cpp" "Communication/MessageHandle.cpp" "Communication/CRC16.c"
                     INCLUDE_DIRS "")
